syntax = "proto3";

package discovery.protos;

service RegistryService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Unregister(UnregisterRequest) returns (UnregisterResponse) {}
    rpc GetServices(GetServicesRequest) returns (ServicesResponse) {}
}

service RegistrantService {
    rpc HeartBeat(HeartbeatRequest) returns (HeartbeatResponse) {}
}

message RegisterRequest {
    string controlAddress = 1;
    string serviceName = 2;
    string serviceBalancerAddress = 3;
    string serviceLocalAddress = 4;
}

message RegisterResponse {
    string Message = 1;
    bool Success = 2;
    repeated Error Errors = 3;
}

message UnregisterRequest {
    string serviceName = 1;
    string controlAddress = 2;
}

message ServiceInfo {
    string serviceName = 1;
    string serviceBalancerAddress = 2;
    repeated string serviceLocalAddress = 3;
}

message GetServicesRequest {

}

message ServicesResponse {
    repeated ServiceInfo serviceInfos = 1;
}

message UnregisterResponse {
    string Message = 1;
    bool Success = 2;
    repeated Error Errors = 3;
}

message HeartbeatRequest {
    string Message = 1;
}

message HeartbeatResponse {
    string Message = 1;
    bool Success = 2;
    repeated Error Errors = 3;
}

message Error {
   uint32 Code = 1;
   string Message = 2;
}